<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorekeeper</string>
    <string name="action_settings">Settings</string>
    <string name="manage_players_button">Manage Players</string>
    <string name="new_game_button">New Game</string>
    <string name="history_button">History</string>
    <string name="new_game_heading">New Game</string>
    <string name="history_heading">History</string>
    <string name="manage_players_heading">Manage Players</string>
    <string name="add_player_button">Add Player</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="start_game">Start Game!</string>
    <string name="no_players_available">You currently have not setup any players. Please go back to the Manage Players screen and add a few people.</string>
    <string name="game_name_hint">Game name (Hearts, Spades, Mini-Golf, etc.)</string>
    <string name="player_name_hint">Player name</string>
    <string name="next">Next</string>
    <string name="order_players_heading">Order players</string>
    <string name="order_players_title">Order the players</string>
    <string name="game_play_heading">Game</string>
    <string name="game_over">Game Over</string>
    <string name="next_player">Next Player</string>
    <string name="congratulations">Congratulations!</string>
    <string name="the_winner_is">The Winner Is:</string>
    <string name="game_over_heading">Game Over</string>
    <string-array name="game_types">
        <item>Highest score wins</item>
        <item>Lowest score wins</item>
    </string-array>

</resources>
