<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/game_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_name_hint"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/game_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_name_text"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/no_players_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_players_available"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone" />

    <ListView
        android:id="@+id/available_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_type_spinner"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:divider="#CCCCCC"
        android:dividerHeight="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/next"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>


</RelativeLayout>