<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/manage_players_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/button"
        android:text="@string/manage_players_button"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/button"
        android:text="@string/new_game_button"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/button"
        android:text="@string/history_button"
        android:textColor="#ffffff"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>
