<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/new_player_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_player_name"
            android:hint="@string/player_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <Button
            android:id="@+id/add_player_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game_button"
            android:enabled="false"
            android:text="@string/add_player_button" />
    </LinearLayout>


    <ListView
        android:id="@+id/players_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_player_controls"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="5dp"
        android:divider="#CCCCCC"
        android:dividerHeight="2dp" />

    <Button
        android:id="@+id/done_managing_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/done"
        android:textSize="@dimen/button_text_size" />

</RelativeLayout>